# OpenCvDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/gxh/opencvdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CarPlateLocation.cpp  CarPlateLocation.h  CarPlateRecgnize.cpp  CarPlateRecgnize.h  native-lib.cpp
app/src/main/java/cn/gxh/opencvdemo/: MainActivity.java
app/src/main/java/cn/gxh/opencvdemo/face/: CameraHelper.java  FaceActivity.java  TraceHelper.java  Utils.java
app/src/main/res/layout/: activity_face.xml  activity_main.xml
app/src/test/java/cn/gxh/opencvdemo/: ExampleUnitTest.java
